--- a/Credit_Card_Approval_Predictions.ipynb
+++ b/Credit_Card_Approval_Predictions.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit Card Approval Predictions.ipynb",
       "provenance": [],
       "mount_file_id": "1fq1WENRdctd25qPhV4i4Ylej3_bUbiCo",
-      "authorship_tag": "ABX9TyN7IR12iQOfpFsBLh1cfuAb",
+      "authorship_tag": "ABX9TyMIpuf5mn31Vyr8iIHwKFRU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1097,16 +1097,12 @@
         "# Instantiate MinMaxScaler and use it to rescale X_train and X_test\n",
         "scaler = MinMaxScaler(feature_range=(0,1))\n",
         "rescaledX_train = scaler.fit_transform(X_train)\n",
-        "rescaledX_test = scaler.transform(X_test)\n",
-        "\n",
-        "#graph\n",
-        "#import matplotlib.pyplot as plt\n",
-        "#plt.scatter(rescaledX_train)"
+        "rescaledX_test = scaler.transform(X_test)\n"
       ],
       "metadata": {
         "id": "_LQyOuBOOQJh"
       },
-      "execution_count": 53,
+      "execution_count": 92,
       "outputs": []
     },
     {
