--- a/Credit_Card_Approval_Predictions.ipynb
+++ b/Credit_Card_Approval_Predictions.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit Card Approval Predictions.ipynb",
       "provenance": [],
       "mount_file_id": "1fq1WENRdctd25qPhV4i4Ylej3_bUbiCo",
-      "authorship_tag": "ABX9TyMIpuf5mn31Vyr8iIHwKFRU",
+      "authorship_tag": "ABX9TyNKYpgLO7KgmXD/e4EvCr9B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -295,7 +295,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Next, we will observe all of the applicatoins. This data set does not reveal actual applicant information for privacy rights. But it is know from the source that categories such as gender, age, Debt, martial status, customer's bank, education Level, ethnicity, years employed, prior defaults, employment status, credit score, drivers liscence information, citizenship, zip code, and income all effect the approval status of a credit card.**"
+        "**Next, we will observe all of the applications. This data set does not reveal actual applicant information due to privacy rights. But it is known from the source that categories such as gender, age, debt, martial status, customer's bank, education level, ethnicity, years employed, prior defaults, employment status, credit score, driver's liscence information, citizenship, zip code, and income all effect the approval status of a credit card.**"
       ],
       "metadata": {
         "id": "2cwJzKqZJ05V"
@@ -327,7 +327,7 @@
         },
         "outputId": "ce306aa8-306d-4fc1-ff28-cb7a5a23cc4f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +869,7 @@
       "metadata": {
         "id": "Ly5Zz9cuLRd5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -896,13 +896,13 @@
       "metadata": {
         "id": "A0xfhEHtLcuX"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Now, we will take the missing values and replace them with the average value of the respective column. Afterwards we want to observe how many NaN's are left.**"
+        "**Now, we will take the missing values and replace them with the average value of their respective column. Afterwards we want to observe how many NaN's are left.**"
       ],
       "metadata": {
         "id": "xULal6X7LoKQ"
@@ -926,7 +926,7 @@
         },
         "outputId": "dadf8ada-8ad6-4db5-a5a9-82bbefeca3be"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1007,7 @@
         },
         "outputId": "3f6163b6-712e-4706-bcec-40f5dad689d5"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1072,7 @@
       "metadata": {
         "id": "ksTItkM_NziO"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1102,7 +1102,7 @@
       "metadata": {
         "id": "_LQyOuBOOQJh"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1137,7 +1137,7 @@
         },
         "outputId": "43028814-8972-4fa9-e257-11166c5acc9e"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1199,7 @@
         },
         "outputId": "22ab4ea8-f9b9-49ce-a45a-c47a8adf2070"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,7 +1255,7 @@
       "metadata": {
         "id": "PzZVtj4yQg3f"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
